test/tests/MisusedSelf.expected
MisusedSelf.panda:4:18: error: cannot reference 'self' from a @class context
1 error
