test/tests/MisusedSelf.panda
class MisusedSelf {
    @class
    method main() {
        var x := self
    }
}